[tool.poetry]
name = "imcluster"
version = "0.1.0"
description = "Clusters images."
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "^0.12.0"
typer = "^0.4.0"
scikit-learn = "^1.0.2"
plotly = "^5.6.0"
pandas = "^1.4.1"
rich = "^12.0.0"
pyarrow = "^7.0.0"
bokeh = "^2.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
imcluster = "imcluster.main:app"
